Fixed alignment of pagination on smaller screen

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
@@ -555,7 +555,6 @@ button {
 }
 
 .view-control {
-  float: right;
   min-width: 310px;
   text-align: right;
   margin-top: 0.7rem;
@@ -583,11 +582,23 @@ button {
   text-align: center;
 
   .page-navigation-container-helper {
-    display: inline-block;
     margin-top: 2rem;
 
     @media screen and (max-width: @mobile-max-width) {
       margin: 0.5rem 0 1rem !important;
+    }
+  }
+  
+  .buttons-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
+    @media screen and (max-width:1200px) {
+        .page-navigation-container-helper {
+          order: 3;
+          flex-grow: 1;
+        }
     }
   }
 
